Example Logo > Main Logo

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
      <br>
 
     <div class="content">
-        <img src="assets/branding/logo.png" alt="Example Image">
+        <img src="assets/branding/logo.png" alt="Logo">
         <h4>ReVancedPlus</h4>
         <p>A collection of ReVanced apps, patches and more!</p>
     </div>
